@@ -70,6 +70,9 @@ There is no provisioning for \fBssh\fR so unless you have configured
 Also note that the PATH on the remote host should be set in such a way that all
 the rdup-util scripts can be found.
 .TP
+.B \-l directory
+Use \fBdirectory\fR for the lock file.
+.TP
 .B \-E file
 See \-E in rdup(8).
 .TP
