@@ -26,6 +26,7 @@ usage() {
         echo " -c REMOTE  dump the backup on a remote machine with ssh"
         echo " -k KEYFILE encrypt all files, using rdup-crypt"
         echo " -n PREFIX  optional directory prefix for the timestmp and filelist"
+	echo " -l LOCKDIR optional directory for lock file (/var/lock)"
         echo " -E FILE    use FILE as an exclude list"
         echo " -f         force a full dump"
         echo " -z         compress all files, using rdup-gzip"
@@ -42,7 +43,6 @@ etc=false
 PROGNAME=$0
 PREFIX=""
 BACKUPDIR=""
-BACKUPDIR_PLAIN=""
 FIRST="" # the first backup dir
 OPT=""
 c=""
@@ -53,7 +53,7 @@ u=false
 force=false
 E=""
 
-while getopts ":ab:k:c:n:vzfxuehVE:" o; do
+while getopts ":ab:k:c:n:vzfxuehVE:l:" o; do
         case $o in
                 b) BACKUPDIR="$OPTARG"
                 if [[ -z "$OPTARG" ]]; then
@@ -67,6 +67,13 @@ while getopts ":ab:k:c:n:vzfxuehVE:" o; do
                 fi
                 E="-E $OPTARG"
                 ;;
+		l)
+                if [[ -z "$OPTARG" ]]; then
+                        _echo2 "-l needs an argument"
+                        exit 1
+                fi
+		lockdir=$OPTARG
+		;;
                 k)
                 if [[ -z "$OPTARG" ]]; then
                         _echo2 "-k needs an argument"
